src/test/ui/asm/issue-85247.rwpi.stderr
error: cannot use register `r9`: the RWPI static base register (r9) cannot be used as an operand for inline asm
  --> $DIR/issue-85247.rs:23:18
   |
LL |         asm!("", out("r9") _);
   |                  ^^^^^^^^^^^

error: aborting due to previous error

